--- a/Notebook.Rmd
+++ b/Notebook.Rmd
@@ -3,14 +3,19 @@ title: "R VideoGames"
 output: html_notebook
 ---
 
-<h1> inital commit </h1>
+<h1> R Notebook - Verdieping beroepsproduct ICT Business </h1>
 
-```{r}
-plot(cars)
+```{r }
+library("tidyverse") # De library tidyverse gebruik ik voor filters etc.
+library("csvread") # library om Excel bestanden in te kunnen lezen.
+library("lubridate")# library om een numerieke waarde terug te krijgen bij datums.
 ```
 
-Add a new chunk by clicking the *Insert Chunk* button on the toolbar or by pressing *Ctrl+Alt+I*.
 
-When you save the notebook, an HTML file containing the code and output will be saved alongside it (click the *Preview* button or press *Ctrl+Shift+K* to preview the HTML file).
+```{r}
+gamesdf <- read.csv("sources/vgsales.csv") # dataset inlezen en in dataframe gamesdf plaatsen
 
-The preview shows you a rendered HTML copy of the contents of the editor. Consequently, unlike *Knit*, *Preview* does not run any R code chunks. Instead, the output of the chunk when it was last run in the editor is displayed.
+```
+
+
+
